<resources>
    <string name="app_name">ViewPager2Practice</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_name_bank_TV">Название банка</string>
    <string name="text_info_viewpager_TV">описание слайда</string>
    <string name="text_name_bank">Urbank</string>
    <string name="text_start_BTN">Поехали!</string>
    <string name="text_reg_TV">Регистрация</string>
    <string name="text_username_ET">UserName</string>
    <string name="text_password_ET">Password</string>
    <string name="text_signup_BTN">SignUp</string>
    <string name="text_sign_in_TV">Авторизация</string>
    <string name="text_signin_BTN">SignIn</string>
    <string name="text_sorry_TV">Извините, производятся технические работы :(</string>
</resources>