<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.9"
    android:background="@drawable/login_background"
    tools:context=".ViewPagerFragment">


    <LinearLayout
        android:id="@+id/layoutViewPagerLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/viewPagerNameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/text_name_bank_TV"
            android:textColor="@color/black"
            android:textSize="36sp" />

        <ImageView
            android:id="@+id/viewPagerPicIV"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/viewPagerInfoTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="end"
            android:hint="@string/text_info_viewpager_TV"
            android:textColor="@color/text_info_color"
            android:textSize="24sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/startBTN"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_corner"
            android:padding="@dimen/_18dp"
            android:text="@string/text_start_BTN"
            android:textColor="@color/text_info_color"
            android:textSize="@dimen/_24sp"
            android:visibility="gone" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>